--- a/JHookumchand_SysPg_Lab_Inheritance/JHookumchand_SysPg_Lab_Inheritance.vcxproj
+++ b/JHookumchand_SysPg_Lab_Inheritance/JHookumchand_SysPg_Lab_Inheritance.vcxproj
@@ -129,12 +129,14 @@
   <ItemGroup>
     <ClCompile Include="BaseAccount.cpp" />
     <ClCompile Include="CheckingAccount.cpp" />
+    <ClCompile Include="CreditAccount.cpp" />
     <ClCompile Include="JHookumchand_SysPg_Lab_Inheritance.cpp" />
     <ClCompile Include="SavingsAccount.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseAccount.h" />
     <ClInclude Include="CheckingAccount.h" />
+    <ClInclude Include="CreditAccount.h" />
     <ClInclude Include="SavingsAccount.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
