--- a/JHookumchand_SysPg_Lab_Inheritance/JHookumchand_SysPg_Lab_Inheritance.vcxproj
+++ b/JHookumchand_SysPg_Lab_Inheritance/JHookumchand_SysPg_Lab_Inheritance.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="SavingsAccount.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\JHookumchand_SysPg_LabHelperLibrary\JHookumchand_SysPg_LabHelperLibrary\Helper.h" />
     <ClInclude Include="BaseAccount.h" />
     <ClInclude Include="CheckingAccount.h" />
     <ClInclude Include="CreditAccount.h" />
