--- a/JHookumchand_SysPg_Lab_Inheritance/JHookumchand_SysPg_Lab_Inheritance.vcxproj.filters
+++ b/JHookumchand_SysPg_Lab_Inheritance/JHookumchand_SysPg_Lab_Inheritance.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="CreditAccount.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\JHookumchand_SysPg_LabHelperLibrary\JHookumchand_SysPg_LabHelperLibrary\Helper.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
